[package]
name = "frac721"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[alias]
wasm = "build --target wasm32-unknown-unknown --release --lib"
wasm-debug = "build --target wasm32-unknown-unknown --lib"
schema = "run schema"

[dependencies]
cosmwasm-std = { version = "1.3.1", features = ["staking"] }
cw-storage-plus = "1.1.0"
sylvia = "0.7.0"
schemars = "0.8.12"
cosmwasm-schema = "1.3.1"
serde = "1.0.180"
serde_json = "1.0.108"
thiserror = "1.0.44"
cw721 = "0.18.0"
cw20 = "1.1.2"
cw20-base = "1.1.2"

[dev-dependencies]
cw721-base = "0.18.0"
cw-multi-test = "0.19.0"